Add docs on BYOC revocation
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -834,8 +834,15 @@ successful revocation will rotate the CRL.
 
 #### Parameters
 
-- `serial_number` `(string: <required>)` - Specifies the serial number of the
+~> Note: either `serial_number` or `certificate` (but not both) must be
+   specified on requests to this endpoint.
+
+- `serial_number` `(string: <optional>)` - Specifies the serial number of the
   certificate to revoke, in hyphen-separated or colon-separated hexadecimal.
+
+- `certificate` `(string: <optional>)` - Specifies the certificate to revoke,
+  in PEM format. This certificate must have been signed by one of the issuers
+  in this mount in order to be accepted for revocation.
 
 #### Sample Payload
 
